<resources>
    <string name="app_name">BadgeEg</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="st_incr">+</string>
    <string name="st_decr">-</string>
    <string name="lab_incr">+</string>
    <string name="lab_decr">-</string>
    <string name="cal_incr">+</string>
    <string name="cal_decr">-</string>
    <string name="clear">CLEAR</string>
</resources>
