<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.example.sunil.badgeeg.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"/>



    <RelativeLayout
        android:id="@+id/rel_lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/toolbar_lay">

        <RelativeLayout
            android:id="@+id/rel_laysub1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_lay1"
                android:layout_toLeftOf="@+id/rel_lay3"
                android:layout_toStartOf="@+id/rel_lay3"
                android:background="@drawable/food" />

        </RelativeLayout>

        <TextView
            android:id="@+id/badge_notify1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/rel_laysub1"
            android:background="@drawable/item_count"
            android:text="@string/_0"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="normal" />

    </RelativeLayout>



   <RelativeLayout
       android:id="@+id/rel_lay2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="100dp"
       android:layout_marginTop="10dp"
       android:layout_toRightOf="@id/rel_lay1"
       android:layout_below="@id/toolbar_lay">

       <RelativeLayout
           android:id="@+id/rel_laysub2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

           <Button
               android:id="@+id/label"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/label"
               android:layout_alignParentTop="true"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true" />

       </RelativeLayout>

       <TextView
           android:id="@+id/badge_notify2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignRight="@id/rel_laysub2"
           android:background="@drawable/item_count"
           android:text="@string/_0"
           android:textColor="#fff"
           android:textSize="16sp"
           android:textStyle="normal" />

   </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rel_lay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/rel_lay1"
        android:layout_toRightOf="@+id/rel_lay1"
        android:layout_toEndOf="@+id/rel_lay1"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="0dp">

        <RelativeLayout
            android:id="@+id/rel_laysub3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calender"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/badge_notify3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/rel_laysub3"
            android:background="@drawable/item_count"
            android:text="@string/_0"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="normal" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/operation"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/strawberry_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_strawberry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/strawberry_incr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toggle_strawberry"
                android:text="@string/st_incr"/>

            <Button
                android:id="@+id/strawberry_decr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/strawberry_incr"
                android:text="@string/st_decr"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/label_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/label_incr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toggle_label"
                android:text="@string/lab_incr"/>

            <Button
                android:id="@+id/label_decr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_incr"
                android:text="@string/lab_decr"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/calender_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/calender_incr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toggle_calender"
                android:text="@string/cal_incr"/>

            <Button
                android:id="@+id/calender_decr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calender_incr"
                android:text="@string/cal_decr"/>

        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/clearall_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/operation"
        android:layout_marginTop="20dp"
        android:text="@string/clear"/>


</RelativeLayout>
